nginx-app-launcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-launcher-service
  namespace: app-launcher
spec:
  type: NodePort
  selector:
    app: app-launcher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30803
