nginx-app-launcher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: app-launcher
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apps.cnsd.gob.pe
    secretName: app-tls
  rules:
  - host: apps.cnsd.gob.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-launcher-service
            port: 
              number: 80
      - path: /gitlab
        pathType: Prefix
        backend:
          service:
            name: gitlab-service
            port: 
              number: 80
      - path: /harbor
        pathType: Prefix
        backend:
          service:
            name: harbor-service
            port: 
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port: 
              number: 80
